@@ -454,4 +454,3 @@ name : public base\
 }; ABSTRACT_ITEM_PROTOTYPE(name, base, &base##_ProtoType);
 
 #endif
-
