@@ -106,4 +106,3 @@ class object : public entity, public id
 };
 
 #endif
-
